--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "serve": "node ./src/main.js",
+    "serve": "nodemon ./src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yzy",
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.13.4"
+    "dotenv": "^16.0.0",
+    "koa": "^2.13.4",
+    "nodemon": "^2.0.15"
   }
 }
