--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "dotenv": "^16.0.0",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
-    "koa-router": "^10.1.1"
+    "koa-router": "^10.1.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.18.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
