--- a/.env
+++ b/.env
@@ -6,4 +6,11 @@ PG_USER = postgres
 PG_PWD = 123456
 PG_DB = zdsc
 
+
+MYSQL_HOST = 47.103.157.137
+MYSQL_PORT = 3306
+MYSQL_USER = shinebay
+MYSQL_PWD = 991201yzy.
+MYSQL_DB = zdsc
+
 JWT_SECRET = SHINEBAY
