--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-parameter": "^3.0.1",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
+    "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.18.0"
