--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon ./src/main.js",
+    "serve": "node ./src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yzy",
