--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-parameter": "^3.0.1",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
+    "koa2-connect-history-api-fallback": "^0.1.3",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
